# notivae

./: .dockerignore  .env.dev  .env.sample  .gitignore  README.md  docker-compose.dev.yml
backend/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1158271760b1_logs.py  452c807fb597_users_and_authentication.py
backend/app/: config.py  lifespan.py  main.py
backend/app/api/: __init__.py
backend/app/api/admin/: __init__.py
backend/app/api/auth/: __init__.py
backend/app/api/users/: __init__.py  auth_identities.py  me.py
backend/app/config/: __init__.py  _settings.py  app.py  database.py  discord.py  enums.py  oidc.py  redis.py  security.py  server.py  settings.py
backend/app/config/auth/: __init__.py  local.py
backend/app/core/: redis.py  util.py
backend/app/core/dependencies/: __init__.py  user.py
backend/app/db/: session.py
docs/: package-lock.json  (+1 more)
server/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1158271760b1_logs.py  150534bd446e_mfa.py  452c807fb597_users_and_authentication.py  9248351a3ea7_notifications.py  95f03e6a01f1_added_user_avatars.py  981fe1c79dfe_added_indexes.py
server/app/: bootstrap.py  exception_handlers.py  lifespan.py  main.py
server/app/api/: __init__.py  features.py  init.py
server/app/config/: __init__.py  _settings.py  _utils.py  app.py  assets.py  gzip.py  logging.py  mail.py  security.py  server.py
server/app/core/: redis.py
server/app/db/: base.py  session.py
server/app/ws/: __init__.py
(+332 files in other folders)
