[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "redis[hiredis]>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.34.3",
]
