[project]
name = "server"
version = "0.0.0"
description = "backend entrypoint of the system, responsible for handling client communication, routing requests, managing authentication, and coordinating with other internal services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.1",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "sse-starlette>=2.4.1",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.34.3",
]
